--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://62.169.159.94:7861
+REACT_APP_API_URL=https://62.169.159.94:7861
 REACT_APP_API_KEY=Hf1RCtjc5eqV5nlmU8VSBwUT5Ea3zjxsflpb8Wk4epc
