--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://outlined-fix-bacterial-sec.trycloudflare.com/docs
+REACT_APP_API_URL=https://outlined-fix-bacterial-sec.trycloudflare.com
 REACT_APP_API_KEY=Hf1RCtjc5eqV5nlmU8VSBwUT5Ea3zjxsflpb8Wk4epc
